edited answer sentence structure

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@ Remember it has to be dynamic so if you change the value of the variables, the w
             <input type="button" id="reset" value="reload">
         </form>
         <div id="transparent">
-            <p>When I add <span class="a"> a </span> to <span class="b">b</span>, I get:</p>
-            <input type="number" id="sum" placeholder="sum">
-            <p>When I subtract <span class="b">b</span> from <span class="a">a</span>, I get:</p>
-            <input type="number" id="difference" placeholder="difference">
-            <p>When I multiply <span class="a">a</span> and <span class="b">b</span>, I get:</p>
-            <input type="number" id="product" placeholder="product">
-            <p>When I divide <span class="a">a</span> by <span class="b">b</span>, I get:</p>
-            <input type="number" id="quotient" placeholder="quotient">
+            <p>When I add your first number, <span class="a"> a </span>, to your second number, <span class="b">b</span>, I get <span id="z_add">z</span>.</p>
+            <!-- <input type="number" id="sum" placeholder="sum"> -->
+            <p>When I subtract your second number, <span class="b">b</span>, from your first number, <span class="a">a</span>, I get <span id="z_sub">z</span>.</p>
+            <!-- <input type="number" id="difference" placeholder="difference"> -->
+            <p>When I multiply your first number, <span class="a">a</span>, and your second number, <span class="b">b</span>, I get <span id="z_mult">z</span>.</p>
+            <!-- <input type="number" id="product" placeholder="product"> -->
+            <p>When I divide your first number, <span class="a">a</span>, by your second number, <span class="b">b</span>, I get <span id="z_div">z</span>.</p>
+            <!-- <input type="number" id="quotient" placeholder="quotient"> -->
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
